# patients_rag

./: .gitignore  README.md  pyproject.toml  run_streamlit.sh
src/: index_patients.py  search_patients.py  streamlit_app.py  test_scripts.py
